--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="#" class="nav-link">About</a></li>
             <li class="nav-item">
-              <a href="#" class="nav-link active">Services</a>
+              <a href="../index.html" class="nav-link active">Services</a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link">Contact Us</a>
