--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       </div>
     </main>
     <footer>
-      <div class="container text-center text-bg-warning p-2 ">
+      <div class="container-fluid text-center text-bg-warning p-2 ">
         <h4 class="h5">&copy; Majeed Solars Providing Green & Clean Energy.</h4>
       </div>
     </footer>
